--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,90 +14,131 @@ TABLE OF CONTENTS:
 */
 
 /* 0. Reset ================================= */
-@import 'reset';
-
+@import "reset";
 
 /* 1. Main Layout ================================= */
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	background: #ccc;
+  background: #fff;
 }
-
-
-
 
 /* 2. Content ================================= */
 
-.floating-box {
-	position: relative;
-	font-family: sans-serif;
-	width: 90%;
-	max-width: 500px;
-	margin: 140px auto;
-	padding: 30px 20px 30px 30px;
-	.foreground {
-		position: relative;
-		z-index: 2;
-		transform: translateZ(100px);
-	}
-	.background {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		left: 0;
-		top: 0;
-		background: white;
-		z-index: 1;
-		// perspective: 2000px;
-		transition: 0.2s;
-		transform: translateX(20px) perspective(600px) rotateY(15deg);
-	}
-	&:hover .background {
-		transform: translateX(-30px) perspective(600px) rotateY(-15deg);		
-	}
-	.logo {
-		position: absolute;
-		top: -30px;
-		width: 60px;
-		z-index: 2;
-		transform: translateZ(100px);
-		transition: 0.3s;
+form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  .text-inputs {
+    display: flex;
+    width: 50%;
+  }
 
-		&:hover {
-			transform: rotate(-0.4turn)
-		}
-	}
-	h1 {
-		font-weight: 700;
-		font-size: 22pt;
-		margin: 15px 0;
-	}
-	p {
-		color: #777;
-		// margin: 10px 0;
-		line-height: 140%;
-	}
-	p.github {
-		font-size: 0.8em;
-		
-		a {
-			opacity: 0.2;
-			transition: 0.3s;
-			&:hover {
-				opacity: 1;
-				color: red;
-			}
-		}
-	}
-	code {
-		position: absolute;
-		top: 20px;
-		right: 20px;
-		font-size: 0.8em;
-		opacity: 0.2;
-	}
+  .pricing {
+    display: flex;
+    align-items: center;
+    width: 50%;
+    padding-top: 1%;
+    h2 {
+      padding-right: 1%;
+    }
+
+    .price {
+      display: flex;
+      align-items: center;
+
+      width: 15%;
+
+      input {
+        margin: 0;
+        width: 25%;
+      }
+    }
+  }
+  .open {
+    width: 50.3%;
+    display: flex;
+    align-items: center;
+    padding-top: 1%;
+  }
+  button {
+    background-color: #c41200;
+    color: white;
+    border-radius: 53px;
+
+    border-color: #c41200;
+    width: 15%;
+    font-size: 1.4rem;
+  }
+}
+
+ul {
+  @include flex-center;
+  flex-direction: column;
+  li {
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    padding: 10px;
+    border: solid 1px black;
+    @include bp-med {
+      flex-direction: row;
+    }
+    .review-container {
+      display: flex;
+      width: 100%;
+      .info-container {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        @include bp-med {
+          width: 70%;
+        }
+        .heading-container {
+          display: flex;
+          flex-direction: column-reverse;
+
+          a {
+            text-decoration: none;
+            color: black;
+            padding-bottom: 2.5%;
+            h2 {
+              font-size: 2rem;
+            }
+          }
+          .stats-container {
+            padding-bottom: 2.5%;
+
+            span {
+              padding-right: 3%;
+              font-size: 1.5rem;
+            }
+          }
+        }
+        .cat-container {
+          padding-bottom: 2.5%;
+        }
+      }
+      span {
+        padding-bottom: 2.5%;
+      }
+      img {
+        object-fit: cover;
+        min-width: 250px;
+        min-height: 250px;
+        max-width: 250px;
+        max-height: 250px;
+        border: solid 1px black;
+
+        background-color: #eee;
+        @include bp-med {
+          margin-left: 20px;
+          min-width: 250px;
+        }
+      }
+    }
+  }
 }
